--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "mench_front",
-  "version": "0.1.0",
+  "version": "2.0.0",
   "private": true,
   "dependencies": {
+    "parse": "^1.11.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.0"
+    "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "next",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
+    "sanitize.css": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
